fix: Fix the overflowing behaviour of the book list

--- a/src/Clients/Web/src/global.css
+++ b/src/Clients/Web/src/global.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 .page{
-    @apply p-14 md:pt-24;
+    @apply p-16 md:pt-28;
+}
+
+.link{
+    @apply underline text-blue-600 hover:text-blue-500 transition-all cursor-pointer;
 }
 
 #hamburger{
